<resources>
    <string name="app_name">WorkoutDiary</string>
    <string name="no_trainings">No training</string>
    <string name="training_name">Training name</string>
    <string name="add_exercise">Add exercise</string>
    <string name="delete_training">Delete training</string>
    <string name="today">(today)</string>
    <string name="muscle_type">Muscle group</string>
    <string name="exercise">Exercise</string>
    <string name="training_block_header">Training block</string>
    <string name="sets_count">Sets number:</string>
    <string name="save_text">Save</string>
    <string name="reps">Repeats</string>
    <string name="weight">Weight (kg)</string>
    <string name="delete">Delete</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_description">Exercise description (optional)</string>
    <string name="add_exercise_header">Adding an exercise</string>
    <string name="exercise_type">Exercise type</string>
    <string name="muscle_name">Muscle group name</string>
    <string name="add_muscle">Add muscle group</string>
    <string name="add_muscle_group">Adding a muscle group</string>
    <string name="no_training">No training</string>
    <string name="statistics">Common statistics</string>
    <string name="date_axis">Date</string>
    <string name="reps_axis">Repeats</string>
    <string name="edit">Edit</string>
    <string name="statistics_settings">Statistics setting</string>
    <string name="statistics_settings_hint">Choose an exercise to show its best results for each training day</string>
    <string name="statistics_parameter">Statistics parameter:</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="empty_statistics_data_message">Not enough data to show statistics for this exercise :(\n
        Click on card to configure statistics parameters
        \nCurrent statistics shows best results in exercise for each training day
    </string>
    <string name="empty_statistics_parameters_message">Statistics parameters aren\'t configured!\n
        Click on card to configure parameters.</string>
    <string name="reset_parameters">Reset parameters</string>
    <string name="new_training">New training</string>
    <string name="create_training_from_template">Choose from favourites</string>
    <string name="create_new_training">Create new training</string>
    <string name="empty_templates_message">You haven\'t any favourite trainings yet :(\nTo add
        training to favourites click on heart shaped button on the edit training screen.</string>
    <string name="favourite_trainings">Favourite trainings</string>
    <string name="deleteFavouritesInfoMessage">When you delete training from favourites list it will only
         change favourite status of all trainings with this name. Trainings will not be deleted.\nSwipe right to delete.
        </string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="kilometers">Kilometers</string>
    <string name="meters">Meters</string>
    <string name="settings">Settings</string>
    <string name="app_language">App language:</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="set_number">Set № %1$s</string>
    <string name="enter_data">Enter data!</string>
    <string name="sure_to_delete_training_message">Are you sure that you want to delete training?</string>
    <string name="yes">Yes</string>
    <string name="added_to_favourites">Training was added to favourites!</string>
    <string name="deleted_from_favourites">Training deleted from favourites!</string>
    <string name="distance_set_number">Set № %1$s: %2$s km %3$s m</string>
    <string name="repeats_set_number">Set № %1$s: %2$s repeats</string>
    <string name="time_set_number">Set № %1$s: %2$s min %3$s sec</string>
    <string name="weight_reps_set_number">Set № %1$s: %2$s repeats %3$s kg</string>
    <string name="update_exercise">Update exercise</string>
    <string name="exercise_updating">Exercise updating</string>
    <string name="training_update_attention_message">Attention! Exercise data will be updated in all trainings. Continue?</string>
    <string name="exercise_exists">This exercise is already exists!</string>
    <string name="enter_all_fields">Enter all necessary fields!</string>
    <string name="hold_to_delete">Hold to delete</string>
    <string name="deletion">Deletion</string>
    <string name="exercise_delete_attention_message">Attention! Exercise will be deleted from all trainings! Continue?</string>
    <string name="muscle_group_updating">Muscle group updating</string>
    <string name="update_muscle_group">Update muscle group</string>
    <string name="enter_muscle_group_name">Enter muscle group name</string>
    <string name="muscle_group_exists">This muscle group is already exists!</string>
    <string name="muscle_group_exercises_deletion_attention_message">Attention!
        All exercises in this muscle group will be deleted from all trainings! Continue?</string>
    <string name="weight_and_reps">Weight and repeats</string>
    <string name="exercises">Exercises</string>
    <string name="muscles">Muscles</string>
    <string name="choose_an_exercise">Choose an exercise!</string>
    <string name="last_training">Last training: %1$s</string>
    <string name="without_name">Without name</string>
    <string name="total_trainings">Total trainings: %1$s</string>
    <string name="total_sets">Total sets: %1$s</string>
    <string name="total_reps">Total reps: %1$s</string>
    <string name="total_weight">Total weight: %1$s</string>
    <string name="violet">Violet</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="app_theme">App theme:</string>
    <string-array name="exercise_types">
        <item>@string/reps</item>
        <item>@string/weight_and_reps</item>
        <item>@string/time</item>
        <item>@string/distance</item>
    </string-array>
</resources>