<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_language" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/russianLanguageRadioButton"
            android:layout_width="match_parent"
            android:text="@string/russian"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/englishLanguageRadioButton"
            android:text="@string/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_theme" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/violetThemeRadioButton"
            android:layout_width="match_parent"
            android:text="@string/violet"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/greenThemeRadioButton"
            android:layout_width="match_parent"
            android:text="@string/green"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/redThemeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"/>
    </RadioGroup>

</LinearLayout>