<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/statistics_settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="@string/statistics_settings_hint"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <AutoCompleteTextView
            android:id="@+id/exercise_choice_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownHeight="250dp"
            android:layout_weight="1"
            android:hint="@string/exercise"
            android:inputType="textCapSentences"
            tools:text="Сгибания на бицепс" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/statistics_parameter"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/repsRadioButton"
            android:layout_width="match_parent"
            android:text="@string/reps"
            android:checked="true"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/weightRadioButton"
            android:layout_width="match_parent"
            android:text="@string/weight"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/timeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
        <RadioButton
            android:id="@+id/distanceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"/>

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:text="@string/save_text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:text="@string/reset_parameters"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"/>

</LinearLayout>