<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emptyFavouritesMessageTextView"
        android:layout_width="match_parent"
        android:text="@string/empty_templates_message"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
        android:padding="16dp"
        android:textAlignment="center"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_marginBottom="4dp"
        android:text="@string/favourite_trainings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/favouritesDeleteMessageTextView"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/deleteFavouritesInfoMessage"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouriteTrainingsRecyclerView"
        android:visibility="gone"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"/>

</LinearLayout>