<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:text="@string/add_muscle_group"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/muscle_name_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/muscle_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/muscle_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_muscle_button"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:text="@string/add_muscle"/>

</LinearLayout>