<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/add_exercise_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_picker"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@color/gray_100"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:scaleType="center"
            app:strokeWidth="1dp"
            app:strokeColor="@color/gray_100"
            android:src="@drawable/ic_image_placeholder" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_name_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/exercise_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/muscle_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/muscle_group_choice_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="250dp"
                android:hint="@string/muscle_type"
                android:inputType="textCapSentences"
                tools:text="Бицепс" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/exercise_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:inputType="textMultiLine"
                android:linksClickable="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/exercise_type_choice_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="250dp"
                android:hint="@string/exercise_type"
                android:inputType="none"
                tools:text="Повторения" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/add_exercise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_exercise" />

    </LinearLayout>
</ScrollView>
