<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_edit_training_block_screen.AddEditTrainingBlockScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/training_block_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <AutoCompleteTextView
                android:id="@+id/muscleChoiceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/muscle_type"
                android:inputType="none"
                tools:text="Бицепс" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <AutoCompleteTextView
                android:id="@+id/exerciseChoiceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/exercise_name"
                android:inputType="none"
                tools:text="Сгибания на бицепс" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/number_picker_decrease_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_previous" />

            <TextView
                android:id="@+id/number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="1" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/number_picker_increase_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_next" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>